
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <GridLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="6"
        android:rowCount="8"
        android:layout_centerInParent="true"
        android:layout_margin="10dp"
        >

        <TextView
            android:layout_row="1"
            android:layout_column="2"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/run"
            />

        <Spinner
            android:id="@+id/run"
            android:layout_row="1"
            android:layout_column="3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/spinner_values"

            />

        <TextView
            android:layout_row="2"
            android:layout_column="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meters"
            />

        <TextView
            android:id="@+id/distance"
            android:layout_row="2"
            android:layout_column="3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meters_detail"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="25dp"
            android:singleLine="false"
            />

        <TextView
            android:layout_row="3"
            android:layout_column="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/speed"
            />

        <TextView
            android:id="@+id/speed"
            android:layout_row="3"
            android:layout_column="3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/speed_detail"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="25dp"
            android:singleLine="false"
            />

        <TextView
            android:layout_row="4"
            android:layout_column="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            />

        <TextView
            android:id="@+id/time"
            android:layout_row="4"
            android:layout_column="3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_detail"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="25dp"
            android:singleLine="false"
            />

        <TextView
            android:layout_row="5"
            android:layout_column="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distancePast"
            />

        <TextView
            android:id="@+id/distancePast"
            android:layout_row="5"
            android:layout_column="3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distancePast_detail"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="25dp"
            android:singleLine="false"
            />

        <Button
            android:id="@+id/start"
            android:layout_row="6"
            android:layout_column="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Start"
            android:onClick="onClickStart"
            />

        <Button
            android:id="@+id/pause"
            android:layout_row="6"
            android:layout_column="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:layout_gravity="center_horizontal"
            android:text="@string/Pause"
            android:onClick="onClickPause"
            />

        <Button
            android:id="@+id/stop"
            android:layout_row="6"
            android:layout_column="4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Stop"
            android:onClick="onClickStop"
            />

    </GridLayout>

    ></RelativeLayout>
